# rmk-probability-scale

./: .gitignore  README.md  THOUGHTS.md  pyproject.toml
data/raw/: births_RV11U_2024.json  drowning_rate_RV57_2024.json  forest_fires_current_year.csv  marriages_RV047_2024.json  population_RV021_2024.json  traffic_injuries_TS093_2024.json
output/: events.csv
src/: build_events.py  fetch_data.py  main.py  plot_scale.py
src/probability_scale/: __init__.py  data_fetch.py  events.py  main.py  plotting.py
